# TSrim

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LinkDef.h  Makefile  Mass.cc  Mass.h  README.md  TSrim.cc  TSrim.h  TSrimDict.cc  TSrimDict_rdict.pcm  install_srim.sh  pyproject.toml  range
SR Module/: fit_srim_table.C  get_sr_fit_prm.pl  range
SR Module/range/3he/: 100Ag_in_3he.txt  100Cd_in_3he.txt  100In_in_3he.txt  100Kr_in_3he.txt  100Mo_in_3he.txt  100Nb_in_3he.txt  100Pd_in_3he.txt  100Rb_in_3he.txt  100Rh_in_3he.txt  100Ru_in_3he.txt  100Sn_in_3he.txt  100Sr_in_3he.txt  100Tc_in_3he.txt  100Y_in_3he.txt  100Zr_in_3he.txt  101Ag_in_3he.txt  101Cd_in_3he.txt  101In_in_3he.txt  101Kr_in_3he.txt  101Mo_in_3he.txt  101Nb_in_3he.txt  101Pd_in_3he.txt  101Rb_in_3he.txt  101Rh_in_3he.txt  101Ru_in_3he.txt  101Sn_in_3he.txt  101Sr_in_3he.txt  101Tc_in_3he.txt  101Y_in_3he.txt  101Zr_in_3he.txt  102Ag_in_3he.txt  102Cd_in_3he.txt  102In_in_3he.txt  102Mo_in_3he.txt  102Nb_in_3he.txt  102Pd_in_3he.txt  102Rb_in_3he.txt  102Rh_in_3he.txt  102Ru_in_3he.txt  102Sb_in_3he.txt  (+3094 more)
SR Module/range/air/: 100Ag_in_air.txt  100Cd_in_air.txt  100In_in_air.txt  100Kr_in_air.txt  100Mo_in_air.txt  100Nb_in_air.txt  100Pd_in_air.txt  100Rb_in_air.txt  100Rh_in_air.txt  100Ru_in_air.txt  100Sn_in_air.txt  100Sr_in_air.txt  100Tc_in_air.txt  100Y_in_air.txt  100Zr_in_air.txt  101Ag_in_air.txt  101Cd_in_air.txt  101In_in_air.txt  101Kr_in_air.txt  101Mo_in_air.txt  101Nb_in_air.txt  101Pd_in_air.txt  101Rb_in_air.txt  101Rh_in_air.txt  101Ru_in_air.txt  101Sn_in_air.txt  101Sr_in_air.txt  101Tc_in_air.txt  101Y_in_air.txt  101Zr_in_air.txt  102Ag_in_air.txt  102Cd_in_air.txt  102In_in_air.txt  102Mo_in_air.txt  102Nb_in_air.txt  102Pd_in_air.txt  102Rb_in_air.txt  102Rh_in_air.txt  102Ru_in_air.txt  102Sb_in_air.txt  (+3095 more)
SR Module/range/al/: 100Ag_in_al.txt  100Cd_in_al.txt  100In_in_al.txt  100Kr_in_al.txt  100Mo_in_al.txt  100Nb_in_al.txt  100Pd_in_al.txt  100Rb_in_al.txt  100Rh_in_al.txt  100Ru_in_al.txt  100Sn_in_al.txt  100Sr_in_al.txt  100Tc_in_al.txt  100Y_in_al.txt  100Zr_in_al.txt  101Ag_in_al.txt  101Cd_in_al.txt  101In_in_al.txt  101Kr_in_al.txt  101Mo_in_al.txt  101Nb_in_al.txt  101Pd_in_al.txt  101Rb_in_al.txt  101Rh_in_al.txt  101Ru_in_al.txt  101Sn_in_al.txt  101Sr_in_al.txt  101Tc_in_al.txt  101Y_in_al.txt  101Zr_in_al.txt  102Ag_in_al.txt  102Cd_in_al.txt  102In_in_al.txt  102Mo_in_al.txt  102Nb_in_al.txt  102Pd_in_al.txt  102Rb_in_al.txt  102Rh_in_al.txt  102Ru_in_al.txt  102Sb_in_al.txt  (+3095 more)
SR Module/range/anthracene/: 100Ag_in_anthracene.txt  100Cd_in_anthracene.txt  100In_in_anthracene.txt  100Kr_in_anthracene.txt  100Mo_in_anthracene.txt  100Nb_in_anthracene.txt  100Pd_in_anthracene.txt  100Rb_in_anthracene.txt  100Rh_in_anthracene.txt  100Ru_in_anthracene.txt  100Sn_in_anthracene.txt  100Sr_in_anthracene.txt  100Tc_in_anthracene.txt  100Y_in_anthracene.txt  100Zr_in_anthracene.txt  101Ag_in_anthracene.txt  101Cd_in_anthracene.txt  101In_in_anthracene.txt  101Kr_in_anthracene.txt  101Mo_in_anthracene.txt  101Nb_in_anthracene.txt  101Pd_in_anthracene.txt  101Rb_in_anthracene.txt  101Rh_in_anthracene.txt  101Ru_in_anthracene.txt  101Sn_in_anthracene.txt  101Sr_in_anthracene.txt  101Tc_in_anthracene.txt  101Y_in_anthracene.txt  101Zr_in_anthracene.txt  102Ag_in_anthracene.txt  102Cd_in_anthracene.txt  102In_in_anthracene.txt  102Mo_in_anthracene.txt  102Nb_in_anthracene.txt  102Pd_in_anthracene.txt  102Rb_in_anthracene.txt  102Rh_in_anthracene.txt  102Ru_in_anthracene.txt  102Sb_in_anthracene.txt  (+3094 more)
SR Module/range/ar/: 100Ag_in_ar.txt  100Cd_in_ar.txt  100In_in_ar.txt  100Kr_in_ar.txt  100Mo_in_ar.txt  100Nb_in_ar.txt  100Pd_in_ar.txt  100Rb_in_ar.txt  100Rh_in_ar.txt  100Ru_in_ar.txt  100Sn_in_ar.txt  100Sr_in_ar.txt  100Tc_in_ar.txt  100Y_in_ar.txt  100Zr_in_ar.txt  101Ag_in_ar.txt  101Cd_in_ar.txt  101In_in_ar.txt  101Kr_in_ar.txt  101Mo_in_ar.txt  101Nb_in_ar.txt  101Pd_in_ar.txt  101Rb_in_ar.txt  101Rh_in_ar.txt  101Ru_in_ar.txt  101Sn_in_ar.txt  101Sr_in_ar.txt  101Tc_in_ar.txt  101Y_in_ar.txt  101Zr_in_ar.txt  102Ag_in_ar.txt  102Cd_in_ar.txt  102In_in_ar.txt  102Mo_in_ar.txt  102Nb_in_ar.txt  102Pd_in_ar.txt  102Rb_in_ar.txt  102Rh_in_ar.txt  102Ru_in_ar.txt  102Sb_in_ar.txt  (+3094 more)
SR Module/range/au/: 100Ag_in_au.txt  100Cd_in_au.txt  100In_in_au.txt  100Kr_in_au.txt  100Mo_in_au.txt  100Nb_in_au.txt  100Pd_in_au.txt  100Rb_in_au.txt  100Rh_in_au.txt  100Ru_in_au.txt  100Sn_in_au.txt  100Sr_in_au.txt  100Tc_in_au.txt  100Y_in_au.txt  100Zr_in_au.txt  101Ag_in_au.txt  101Cd_in_au.txt  101In_in_au.txt  101Kr_in_au.txt  101Mo_in_au.txt  101Nb_in_au.txt  101Pd_in_au.txt  101Rb_in_au.txt  101Rh_in_au.txt  101Ru_in_au.txt  101Sn_in_au.txt  101Sr_in_au.txt  101Tc_in_au.txt  101Y_in_au.txt  101Zr_in_au.txt  102Ag_in_au.txt  102Cd_in_au.txt  102In_in_au.txt  102Mo_in_au.txt  102Nb_in_au.txt  102Pd_in_au.txt  102Rb_in_au.txt  (+3097 more)
cmake/: TSrimConfig.cmake.in
macros/: load_srim.C  plot_dee.C  srim_all.C  srim_basic.C  srim_cribpid.C  srim_light.C  srim_mid.C
mass/: CMakeLists.txt  Mass.cc  Mass.h  update_mass_table.py
pybind/: CMakeLists.txt  amdc_mass.cpp  pyMass.cpp  pyTSrim.cpp
range_fit/: #usage.txt#  .#usage.txt  fit_srim_table.C  get_fit_prm.pl  range_fit.txt  range_fit_gas.txt  range_fit_h.txt  range_fit_he-300K-249.5Torr.txt  range_fit_n_o.txt  range_fit_pol10_al.txt  range_fit_pol10_butane.txt  range_fit_pol10_ch2.txt  range_fit_pol10_h.txt  range_fit_pol10_havar.txt  range_fit_pol10_he.txt  range_fit_pol10_mylar.txt  range_fit_pol10_si.txt  range_fit_pol16_al.txt  range_fit_pol16_butane.txt  range_fit_pol16_ch2.txt  range_fit_pol16_h.txt  range_fit_pol16_havar.txt  range_fit_pol16_he.txt  range_fit_pol16_mylar.txt  range_fit_pol16_si.txt  range_fit_solid.txt  usage.txt
src/: CMakeLists.txt  LinkDef.h  TSrim.cc  TSrim.h  TSrimDict_rdict.pcm
src_mass/: CMakeLists.txt  Mass.cc  Mass.h
src_tsrim/: CMakeLists.txt  TSrim.cc  TSrim.h
template/: load_srim.C.in
templates/: TSrimConfig.cmake.in  load_srim.C.in  plot_dee.C.in  rootlogon.C.in  thisTSrim.sh.in
(+50153 files in other folders)
