[tool.poetry]
name = "tsrim"
version = "0.1.0"
package-mode = false
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
nanobind = "^2.1.0"

[tool.poetry.group.dev.dependencies]
nanobind = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
